<resources>
    <string name="app_name">SplashScreenAndMore</string>
    <string name="title_activity_image_slider">ImageSlider</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="car_details">Car Details</string>
    <string name="carrex_logo">Carrex Logo</string>
    <string name="carrex">Carrex</string>
    <!--NavBar Strings-->
    <string name="home_text">Home</string>
    <string name="like_text">Like</string>
    <string name="search_text">Search</string>
    <string name="shop_text">Shop</string>
    <string name="home">Home</string>
    <string name="like">Like</string>
    <string name="search">Search</string>
    <string name="shop">Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_side_bar">NavigationSideBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Qashqai_description">The Nissan Qashqai is a compact crossover SUV (C-segment) developed and produced by the Japanese car manufacturer Nissan since 2006. The first generation of the vehicle was sold under the name Nissan Dualis in Japan and Australia, and Qashqai in other markets.</string>
    <string name="book_now_Button">Book Now</string>
    <string name="quashqai_name">Nissan Quashqai</string>
    <string name="like_it_book_it">  Like it, Book it!</string>
    <string name="land_rover">Land Rover</string>
    <string name="voiceoverbutton">VoiceOverButton</string>
    <string name="blank" />
    <string name="done_and_confirm">Done and Confirm</string>
    <string name="engine_power_horse_power">Engine Power (Horse Power)</string>
    <string name="distance_travelled_in_vehicle_kms">Distance travelled in Vehicle(KMs)</string>
    <string name="url_image_of_vehicle">URL Image Of Vehicle</string>
    <string name="model_of_vehicle">Model Of Vehicle</string>
    <string name="price_of_vehicle">Price of Vehicle</string>
    <string name="make_brand_name_of_the_vehicle">Make(Brand Name) Of the vehicle</string>
    <string name="umar_mechanics_5945_8186_n_ngarage_navauto_5941_3206_n_nsaleem_mechanic_workshop_5253_1651_n_nvishal_auto_services_5776_2893_n_nnadeem_mechanic_5251_5513_n_ngarage_serally_ltd_5498_0103_n_nnathan_mechanix_5494_7955_n_ncaudan_mechanics_centre_5255_5226_n_ngarage_nasser_amp_bros_5817_0810_n_ngarage_ghostrider_5707_0599_n_nendy_mechanics_5938_5979_n_nintermechanic_ltd_5749_4231"><![CDATA[Umar Mechanics : 5945 8186\n\nGarage Navauto : 5941 3206\n\nSALEEM MECHANIC WORKSHOP : 5253 1651\n\nVishal Auto Services : 5776 2893\n\nNadeem Mechanic : 5251 5513\n\nGarage Serally Ltd : 5498 0103\n\nNathan Mechanix : 5494 7955\n\nCaudan Mechanics Centre : 5255 5226\n\nGarage Nasser & Bros : 5817 0810\n\nGarage Ghostrider : 5707 0599\n\nEndy Mechanics : 5938 5979\n\nIntermechanic LTD : 5749 4231]]></string>
    <string name="here_s_a_list_of_our_most_trusted_mechanics">Here\'s a list of our most trusted mechanics :)</string>
    <string name="mechanic_details">MECHANIC DETAILS</string>

    <array name="make">
        <item>Nissan</item>
        <item>Toyota</item>
        <item>Alfa Romeo</item>
        <item>Aston Martin</item>


    </array>

</resources>