<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mecblur"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ContactPage">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#87C2D1"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_blueham">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/headingm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:text="@string/mechanic_details"
                android:textColor="@color/card_2"
                android:textSize="24sp"
                app:fontFamily="@font/aclonica" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.051">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/umar_mechanics_5945_8186_n_ngarage_navauto_5941_3206_n_nsaleem_mechanic_workshop_5253_1651_n_nvishal_auto_services_5776_2893_n_nnadeem_mechanic_5251_5513_n_ngarage_serally_ltd_5498_0103_n_nnathan_mechanix_5494_7955_n_ncaudan_mechanics_centre_5255_5226_n_ngarage_nasser_amp_bros_5817_0810_n_ngarage_ghostrider_5707_0599_n_nendy_mechanics_5938_5979_n_nintermechanic_ltd_5749_4231"
            android:textColor="#FFEB3B"
            app:fontFamily="@font/aclonica"
            android:textSize="20sp" />
    </ScrollView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/here_s_a_list_of_our_most_trusted_mechanics"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:fontFamily="@font/aclonica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <Button
        android:id="@+id/contactbutton"
        android:layout_width="60dp"
        android:layout_height="56dp"
        android:background="@color/Transparent"
        android:contentDescription="@string/home"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>